fix unsharing logic accounting track / group owner